--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
         <div class="greetingContainer emphasize">Hello, World</div>
         <div class="greetingContainer">Im fine, thank you!</div>
         <div class="greetingContainer">
-            <p class="greetingParagraph">Ok lets proceed...</p>
-        </div>
+            <p class="greetingParagraph">Ok lets proceed...</p></div>
         <a href="https://github.com/jcvalleser">Visit my github profile</a>
         <img src="em.jpg" />
+        <div class="greetingContainer">
+            <p class="greetingParagraph">No lets go back...</p></div>
     </body>
 </html>
